[project]
name = "eetk"
version = "0.0.0"
description = "Electronics Engineering Tool Kit"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[SC]E.*"]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest",
    "ruff"
]

[project.scripts]
eetk = "eetk:cli"

[build-system]
requires = ["uv_build>=0.9.28"]
build-backend = "uv_build"

[tool.pytest]
testpaths = ["tests"]
addopts = ["-rA"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
